src/snapshots/async_rust_tui__ui__tests__input_start_screen.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"                                                  "
"                                                  "
"     ┌Start station─────────────────────────┐     "
"     │Gre|                                  │     "
"     └──────────────────────────────────────┘     "
"     ┌Suggestions───────────────────────────┐     "
"     │  Grenoble (Grenoble)                 │     "
"     │▶ Grenoble UGI                        │     "
"     │  Grenoble-Universites                │     "
"     └──────────────────────────────────────┘     "
"                                                  "
"                                                  "
