src/snapshots/async_rust_tui__ui__tests__timer_screen.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"┌Config────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Grenoble (Grenoble) → Lyon Part Dieu                                                                                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Journeys──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌Timer─────────────────────────────────────────────────────────────────────────┐"
"│  Date         Dur    Change Dep at                                                                                   ││        █████   █████           █████   █████           █████   █████         │"
"│  2026-01-03   70m    0      08:00:00                                                                                 ││       ██   ██ ██   ██   ██    ██   ██ ██   ██   ██    ██   ██ ██   ██        │"
"│▶ 2026-01-03   80m    1      09:30:00                                                                                 ││       ██  ███ ██  ███   ██    ██  ███ ██  ███   ██    ██  ███ ██  ███        │"
"│  2026-01-03   75m    2      11:00:00                                                                                 ││       ██ ████ ██ ████         ██ ████ ██ ████         ██ ████ ██ ████        │"
"│                                                                                                                      ││       ████ ██ ████ ██         ████ ██ ████ ██         ████ ██ ████ ██        │"
"│                                                                                                                      ││       ███  ██ ███  ██   ██    ███  ██ ███  ██   ██    ███  ██ ███  ██        │"
"│                                                                                                                      ││        █████   █████    ██     █████   █████    ██     █████   █████         │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"│                                                                                                                      ││                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────┘"
